# -stunning-disco-cabal-bug

./: MyLib.hs  cabal-bug-example.cabal
src/: MyLib.hs
test/: MyLibTest.hs
