cabal-version:       2.2
name:                cabal-bug-example
version:             0.1.0.0
license-file:        LICENSE
author:              Fendor
maintainer:          power.walross@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite cabal-bug-example-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.13 && <4.14, cabal-bug-example
